2008-06-03  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (scheme::applyEx): Added argument check.

        * scheme.h (isCallable): Added for apply procedure.

2008-06-02  higepon  <higepon@users.sourceforge.jp>

        * Pair.h (scheme): Rewrote cloneList recut to loop.

        * repl.scm (repl): Added EOF handling for Ctrl-D.

        * VM.cpp (VM::load): Added TRY and CATCH macro.

2008-05-30  higepon  <higepon@users.sourceforge.jp>

        * Port.cpp (TextualOutputPort::putPair): Fixed bug of (write '(quote)).

2008-05-29  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp : Added load for internal use.

2008-05-28  higepon  <higepon@users.sourceforge.jp>

        * library.scm : Added procedure?, with-input-from-file.

2008-05-26  higepon  <higepon@users.sourceforge.jp>

        * Fixed case bug (thx leque).

        * compiler.scm (do): Added do macro using match.

        * read.cpp (Scm_StringToNumber): Fixed the bug for '... .
                                         strtol accept "..." and returns 0.

        * freeproc.cpp (scheme::macroexpandEx): Added macroexpand procedure.

2008-05-24  higepon  <higepon@users.sourceforge.jp>

        * match.scm: Added Andrew Wright's match.

        * library.scm : Added (list? obj) procedure.

        * library.scm (string-ref): Added (string-ref s k) procedure.

2008-05-23  higepon  <higepon@users.sourceforge.jp>

        * Added div procedure and some tests.

        * Fixed the bug of mod procedure and added some tests. (thx leque)

2008-05-22  higepon  <higepon@users.sourceforge.jp>

        * Added (exit) procedure.

        * Added profiler.
          With -p option, you can enable profiler.

2008-05-21  higepon  <higepon@users.sourceforge.jp>

        * library.scm (vector-for-each): Added (vector-for-each ...), Added (hash-table-for-each ...).

        * freeproc.cpp (scheme::hashTableKeysEx): Adde (hash-table-keys ...)

        * macro.scm: Removed macro.scm.
